// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders extended FAB collapsed 1`] = `
<>
  <View
    style={
      [
        undefined,
        {
          "transformOrigin": "center",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 16,
          "height": 56,
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 56,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 4,
        },
        {
          "pointerEvents": "auto",
        },
      ]
    }
    testID="extended-floating-action-button-container"
  >
    <View
      style={
        [
          {
            "height": "100%",
            "overflow": "hidden",
            "width": "100%",
          },
          {
            "backgroundColor": "rgba(234, 221, 255, 1)",
            "borderRadius": 16,
          },
        ]
      }
    >
      <View
        accessibilityLabel="New message"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              null,
              null,
            ],
          ]
        }
        testID="extended-floating-action-button"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "pointerEvents": "none",
              },
              {
                "height": 56,
                "paddingEnd": 16,
                "paddingStart": 16,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(33, 0, 93, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            plus
          </Text>
          <View
            style={
              [
                {
                  "marginStart": 8,
                },
                {
                  "opacity": 0,
                },
                {
                  "pointerEvents": "none",
                },
              ]
            }
          >
            <Text
              ellipsizeMode="clip"
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": 0.15,
                    "lineHeight": 24,
                  },
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                    "writingDirection": "ltr",
                  },
                  {
                    "color": "rgba(33, 0, 93, 1)",
                  },
                ]
              }
              testID="extended-floating-action-button-text"
            >
              New message
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderWidth": 3,
            "bottom": -5,
            "left": -5,
            "pointerEvents": "none",
            "position": "absolute",
            "right": -5,
            "top": -5,
          },
          {
            "borderColor": "rgba(98, 91, 113, 1)",
          },
          {
            "borderRadius": 21,
            "opacity": 0,
          },
        ]
      }
    />
  </View>
  <View
    aria-hidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "alignSelf": "flex-start",
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(29, 27, 32, 1)",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      New message
    </Text>
  </View>
</>
`;

exports[`renders extended FAB expanded 1`] = `
<>
  <View
    style={
      [
        undefined,
        {
          "transformOrigin": "center",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 16,
          "height": 56,
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 56,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 4,
        },
        {
          "pointerEvents": "auto",
        },
      ]
    }
    testID="extended-floating-action-button-container"
  >
    <View
      style={
        [
          {
            "height": "100%",
            "overflow": "hidden",
            "width": "100%",
          },
          {
            "backgroundColor": "rgba(234, 221, 255, 1)",
            "borderRadius": 16,
          },
        ]
      }
    >
      <View
        accessibilityLabel="New message"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              null,
              null,
            ],
          ]
        }
        testID="extended-floating-action-button"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "pointerEvents": "none",
              },
              {
                "height": 56,
                "paddingEnd": 16,
                "paddingStart": 16,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(33, 0, 93, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            plus
          </Text>
          <View
            style={
              [
                {
                  "marginStart": 8,
                },
                {
                  "opacity": 1,
                },
                {
                  "pointerEvents": "none",
                },
              ]
            }
          >
            <Text
              ellipsizeMode="clip"
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": 0.15,
                    "lineHeight": 24,
                  },
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                    "writingDirection": "ltr",
                  },
                  {
                    "color": "rgba(33, 0, 93, 1)",
                  },
                ]
              }
              testID="extended-floating-action-button-text"
            >
              New message
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderWidth": 3,
            "bottom": -5,
            "left": -5,
            "pointerEvents": "none",
            "position": "absolute",
            "right": -5,
            "top": -5,
          },
          {
            "borderColor": "rgba(98, 91, 113, 1)",
          },
          {
            "borderRadius": 21,
            "opacity": 0,
          },
        ]
      }
    />
  </View>
  <View
    aria-hidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "alignSelf": "flex-start",
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(29, 27, 32, 1)",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      New message
    </Text>
  </View>
</>
`;

exports[`renders extended FAB large size 1`] = `
<>
  <View
    style={
      [
        undefined,
        {
          "transformOrigin": "center",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 28,
          "height": 96,
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 96,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 4,
        },
        {
          "pointerEvents": "auto",
        },
      ]
    }
    testID="extended-floating-action-button-container"
  >
    <View
      style={
        [
          {
            "height": "100%",
            "overflow": "hidden",
            "width": "100%",
          },
          {
            "backgroundColor": "rgba(234, 221, 255, 1)",
            "borderRadius": 28,
          },
        ]
      }
    >
      <View
        accessibilityLabel="New message"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              null,
              null,
            ],
          ]
        }
        testID="extended-floating-action-button"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "pointerEvents": "none",
              },
              {
                "height": 96,
                "paddingEnd": 30,
                "paddingStart": 30,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(33, 0, 93, 1)",
                  "fontSize": 36,
                },
                [
                  {
                    "lineHeight": 36,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            plus
          </Text>
          <View
            style={
              [
                {
                  "marginStart": 16,
                },
                {
                  "opacity": 1,
                },
                {
                  "pointerEvents": "none",
                },
              ]
            }
          >
            <Text
              ellipsizeMode="clip"
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 24,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 32,
                  },
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                    "writingDirection": "ltr",
                  },
                  {
                    "color": "rgba(33, 0, 93, 1)",
                  },
                ]
              }
              testID="extended-floating-action-button-text"
            >
              New message
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderWidth": 3,
            "bottom": -5,
            "left": -5,
            "pointerEvents": "none",
            "position": "absolute",
            "right": -5,
            "top": -5,
          },
          {
            "borderColor": "rgba(98, 91, 113, 1)",
          },
          {
            "borderRadius": 33,
            "opacity": 0,
          },
        ]
      }
    />
  </View>
  <View
    aria-hidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "alignSelf": "flex-start",
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 24,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 32,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(29, 27, 32, 1)",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      New message
    </Text>
  </View>
</>
`;

exports[`renders extended FAB medium size 1`] = `
<>
  <View
    style={
      [
        undefined,
        {
          "transformOrigin": "center",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 20,
          "height": 80,
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 80,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 4,
        },
        {
          "pointerEvents": "auto",
        },
      ]
    }
    testID="extended-floating-action-button-container"
  >
    <View
      style={
        [
          {
            "height": "100%",
            "overflow": "hidden",
            "width": "100%",
          },
          {
            "backgroundColor": "rgba(234, 221, 255, 1)",
            "borderRadius": 20,
          },
        ]
      }
    >
      <View
        accessibilityLabel="New message"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              null,
              null,
            ],
          ]
        }
        testID="extended-floating-action-button"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "pointerEvents": "none",
              },
              {
                "height": 80,
                "paddingEnd": 26,
                "paddingStart": 26,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(33, 0, 93, 1)",
                  "fontSize": 28,
                },
                [
                  {
                    "lineHeight": 28,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            plus
          </Text>
          <View
            style={
              [
                {
                  "marginStart": 12,
                },
                {
                  "opacity": 1,
                },
                {
                  "pointerEvents": "none",
                },
              ]
            }
          >
            <Text
              ellipsizeMode="clip"
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 28,
                  },
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                    "writingDirection": "ltr",
                  },
                  {
                    "color": "rgba(33, 0, 93, 1)",
                  },
                ]
              }
              testID="extended-floating-action-button-text"
            >
              New message
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderWidth": 3,
            "bottom": -5,
            "left": -5,
            "pointerEvents": "none",
            "position": "absolute",
            "right": -5,
            "top": -5,
          },
          {
            "borderColor": "rgba(98, 91, 113, 1)",
          },
          {
            "borderRadius": 25,
            "opacity": 0,
          },
        ]
      }
    />
  </View>
  <View
    aria-hidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "alignSelf": "flex-start",
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 22,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 28,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(29, 27, 32, 1)",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      New message
    </Text>
  </View>
</>
`;

exports[`renders extended FAB not visible 1`] = `
<>
  <View
    style={
      [
        undefined,
        {
          "transformOrigin": "center",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 16,
          "height": 56,
          "opacity": 0,
          "transform": [
            {
              "scale": 0,
            },
          ],
          "width": 56,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 4,
        },
        {
          "pointerEvents": "none",
        },
      ]
    }
    testID="extended-floating-action-button-container"
  >
    <View
      style={
        [
          {
            "height": "100%",
            "overflow": "hidden",
            "width": "100%",
          },
          {
            "backgroundColor": "rgba(234, 221, 255, 1)",
            "borderRadius": 16,
          },
        ]
      }
    >
      <View
        accessibilityLabel="New message"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              null,
              null,
            ],
          ]
        }
        testID="extended-floating-action-button"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "pointerEvents": "none",
              },
              {
                "height": 56,
                "paddingEnd": 16,
                "paddingStart": 16,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(33, 0, 93, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            plus
          </Text>
          <View
            style={
              [
                {
                  "marginStart": 8,
                },
                {
                  "opacity": 1,
                },
                {
                  "pointerEvents": "none",
                },
              ]
            }
          >
            <Text
              ellipsizeMode="clip"
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": 0.15,
                    "lineHeight": 24,
                  },
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                    "writingDirection": "ltr",
                  },
                  {
                    "color": "rgba(33, 0, 93, 1)",
                  },
                ]
              }
              testID="extended-floating-action-button-text"
            >
              New message
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderWidth": 3,
            "bottom": -5,
            "left": -5,
            "pointerEvents": "none",
            "position": "absolute",
            "right": -5,
            "top": -5,
          },
          {
            "borderColor": "rgba(98, 91, 113, 1)",
          },
          {
            "borderRadius": 21,
            "opacity": 0,
          },
        ]
      }
    />
  </View>
  <View
    aria-hidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "alignSelf": "flex-start",
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(29, 27, 32, 1)",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      New message
    </Text>
  </View>
</>
`;

exports[`renders extended FAB transitioning to collapsed 1`] = `
<>
  <View
    style={
      [
        undefined,
        {
          "transformOrigin": "center",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 16,
          "height": 56,
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 56,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 4,
        },
        {
          "pointerEvents": "auto",
        },
      ]
    }
    testID="extended-floating-action-button-container"
  >
    <View
      style={
        [
          {
            "height": "100%",
            "overflow": "hidden",
            "width": "100%",
          },
          {
            "backgroundColor": "rgba(234, 221, 255, 1)",
            "borderRadius": 16,
          },
        ]
      }
    >
      <View
        accessibilityLabel="New message"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              null,
              null,
            ],
          ]
        }
        testID="extended-floating-action-button"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "pointerEvents": "none",
              },
              {
                "height": 56,
                "paddingEnd": 16,
                "paddingStart": 16,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(33, 0, 93, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            plus
          </Text>
          <View
            style={
              [
                {
                  "marginStart": 8,
                },
                {
                  "opacity": 0,
                },
                {
                  "pointerEvents": "none",
                },
              ]
            }
          >
            <Text
              ellipsizeMode="clip"
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": 0.15,
                    "lineHeight": 24,
                  },
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                    "writingDirection": "ltr",
                  },
                  {
                    "color": "rgba(33, 0, 93, 1)",
                  },
                ]
              }
              testID="extended-floating-action-button-text"
            >
              New message
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderWidth": 3,
            "bottom": -5,
            "left": -5,
            "pointerEvents": "none",
            "position": "absolute",
            "right": -5,
            "top": -5,
          },
          {
            "borderColor": "rgba(98, 91, 113, 1)",
          },
          {
            "borderRadius": 21,
            "opacity": 0,
          },
        ]
      }
    />
  </View>
  <View
    aria-hidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "alignSelf": "flex-start",
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(29, 27, 32, 1)",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      New message
    </Text>
  </View>
</>
`;
